; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/makefs/ffs/extr_buf.c_brelse.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/makefs/ffs/extr_buf.c_brelse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i64, %struct.buf*, i64 }

@buftail = common dso_local global i32 0, align 4
@b_tailq = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @brelse(%struct.buf* %0) #0 {
  %2 = alloca %struct.buf*, align 8
  store %struct.buf* %0, %struct.buf** %2, align 8
  %3 = load %struct.buf*, %struct.buf** %2, align 8
  %4 = icmp ne %struct.buf* %3, null
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load %struct.buf*, %struct.buf** %2, align 8
  %8 = getelementptr inbounds %struct.buf, %struct.buf* %7, i32 0, i32 1
  %9 = load %struct.buf*, %struct.buf** %8, align 8
  %10 = icmp ne %struct.buf* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load %struct.buf*, %struct.buf** %2, align 8
  %14 = getelementptr inbounds %struct.buf, %struct.buf* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %1
  %18 = load %struct.buf*, %struct.buf** %2, align 8
  %19 = getelementptr inbounds %struct.buf, %struct.buf* %18, i32 0, i32 2
  store i64 0, i64* %19, align 8
  br label %30

20:                                               ; preds = %1
  %21 = load %struct.buf*, %struct.buf** %2, align 8
  %22 = load i32, i32* @b_tailq, align 4
  %23 = call i32 @TAILQ_REMOVE(i32* @buftail, %struct.buf* %21, i32 %22)
  %24 = load %struct.buf*, %struct.buf** %2, align 8
  %25 = getelementptr inbounds %struct.buf, %struct.buf* %24, i32 0, i32 1
  %26 = load %struct.buf*, %struct.buf** %25, align 8
  %27 = call i32 @free(%struct.buf* %26)
  %28 = load %struct.buf*, %struct.buf** %2, align 8
  %29 = call i32 @free(%struct.buf* %28)
  br label %30

30:                                               ; preds = %20, %17
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.buf*, i32) #1

declare dso_local i32 @free(%struct.buf*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
